profile/themes/openculturas_base/templates/block/block--openculturas-custom-page-title.scss
.block-openculturas-custom-page-title {

  .page-title {
    margin-bottom: .5rem;
  }

  .page-subtitle {
    font-family: $font-base;
    font-size: $font-size-l;
    margin-top: 0;
  }

  .field {
    margin: 0;
  }
}

.custom-page-title--with-image {
  display: flex;
  flex-flow: column;
  align-items: center;
  text-align: center;
  margin-top: 0rem;
  margin-bottom: 2rem;

  .field--name-field-portrait {
    @include profile_circle;
    position: absolute;
    top: -3rem;
    margin:0;
  }

  @include breakpoint(m) {
    margin-top: 1rem;
    margin-bottom: 4rem;
    flex-flow: row wrap;
    align-items: normal;
    text-align: left;

    .field--name-field-portrait {
      position: relative;
      top: $grid-gutter;
      margin-right: $grid-gutter;
    }
  }

}

